# spydr

./: Cargo.toml
src/: collect.rs  crawl.rs  fetch.rs  home_page.rs  lib.rs  main.rs  page.rs  sources.rs  web.rs
src/sources/: cnn.rs  huffpost.rs  pcmag.rs
